Use Java 21 language features
Signed-off-by: Holger Friedrich <mail@holger-friedrich.de>